WebCore/rendering/RenderSVGRoot.h
@@ -42,6 +42,7 @@ public:
 
     virtual short lineHeight(bool b, bool isRootLineBox = false) const;
     virtual short baselinePosition(bool b, bool isRootLineBox = false) const;
+    virtual void calcPrefWidths();
     
     virtual void layout();
     virtual void paint(PaintInfo&, int parentX, int parentY);
